Changed Mp3 files to constant bit rate to avoid javascript .currentTime misreads. Updated decoration containers to avoid blocking mouse clicks where it overlaps elements. Changed track list order. (this is subject to change pending review)

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -227,6 +227,7 @@ button {
 
 .decorationContainer__plan {
   position: relative;
+  z-index: -3;
 }
 
 .decoration__plan {
